--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "predeploy": "npm run build",
     "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
@@ -29,5 +30,6 @@
     "gh-pages": "^6.2.0",
     "globals": "^15.12.0",
     "vite": "^6.0.1"
-  }
+  },
+  "homepage": "https://gszp1.github.io/BigData-Project"
 }
