Adds logback.xml config file. | Adds logback-core dependency.

--- a/middleware/src/main/resources/application.properties
+++ b/middleware/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=middleware
 server.port=9090
+
+# Logging configuration
+logging.level.root=info
+logging.level.springframework.web=debug
