--- a/middleware/Dockerfile
+++ b/middleware/Dockerfile
@@ -1,6 +1,11 @@
 FROM ubuntu:24.04
 
-RUN mkdir /app
+RUN mkdir -p /app && \
+    mkdir -p /var/logs/CarWorthy-middleware
+
+RUN chmod 755 /var/logs/CarWorthy-middleware
+
+WORKDIR /app
 
 RUN apt-get update && \
     apt-get install -y wget unzip openjdk-21-jdk && \
@@ -16,4 +21,4 @@ RUN gradle build --no-daemon
 
 EXPOSE 9090
 
-ENTRYPOINT ["java", "-jar", "build/libs/middleware-1.0.0.jar"]
+ENTRYPOINT ["java", "-jar", "/app/build/libs/middleware-1.0.0.jar"]
