Adds environmental variables.

--- a/model/Dockerfile
+++ b/model/Dockerfile
@@ -1,5 +1,11 @@
 FROM ubuntu:24.04
 
+ENV PS_BROKER_HOST=localhost
+ENV PS_BROKER_PORT=9093
+ENV PS_KAFKA_INPUT_TOPIC="input"
+ENV PS_KAFKA_OUTPUT_TOPIC="output"
+ENV PS_MODEL_PATH ="RF_best"
+
 RUN mkdir /app
 
 WORKDIR /app
